# swagger_output.json
@@ -268,7 +268,7 @@
         }
       }
     },
-    "/booking/re_exam": {
+    "/booking/re-exam": {
       "post": {
         "tags": [
           "booking"
@@ -2408,7 +2408,7 @@
         }
       }
     },
-    "/cage/schedule_cage": {
+    "/cage/schedule-cage": {
       "get": {
         "tags": [
           "cage"
@@ -4815,9 +4815,6 @@
               "schema": {
                 "type": "object",
                 "properties": {
-                  "id": {
-                    "example": "any"
-                  },
                   "time": {
                     "example": "any"
                   }
